--- a/app/src/main/res/layout/fragment_message_detail_geo.xml
+++ b/app/src/main/res/layout/fragment_message_detail_geo.xml
@@ -39,7 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/spacing_small"
-                    android:text="@{viewModel.anyMessageSelected ? @string/geo_dd_format(viewModel.pointGeometry.longitude, viewModel.pointGeometry.latitude): null}"
+                    android:text="@{@string/geo_dd_format(viewModel.pointGeometry.longitude, viewModel.pointGeometry.latitude)}"
                     tools:text="E:/ 111. N:/ 222."/>
             </LinearLayout>
 
@@ -59,7 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/spacing_small"
-                    android:text="@{viewModel.anyMessageSelected ? viewModel.text : null}"
+                    android:text="@{viewModel.text}"
                     tools:text="@string/debug_text"/>
             </LinearLayout>
 
@@ -80,7 +80,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/spacing_small"
-                    android:text="@{viewModel.anyMessageSelected ? viewModel.locationType : null}"
+                    android:text="@{viewModel.locationType}"
                     tools:text="@string/debug_text"/>
 
             </LinearLayout>
