started implementing swipe panel, changed basefragment to Fragement (support.v4)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,13 @@
     <!-- The main content view -->
     <include layout="@layout/activity_main_content" />
 
+    <include layout="@layout/fragment_buttom_panel"/>
+
     <!-- The navigation drawer -->
     <include layout="@layout/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
+
 
 
 
