Layouts and view (fragments) creation for sensors data displaying. The current commit exchanged the message panel with the sensor. This needs to be changed when merging with panel-swipe task.

--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -58,7 +58,7 @@
 
     <fragment
         android:id="@+id/fragment_messages_container"
-        android:name="com.teamagam.gimelgimel.app.message.view.MessagesContainerFragment"
+        android:name="com.teamagam.gimelgimel.app.sensor.view.SensorsContainerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_messages_container" />
