--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,5 +27,8 @@
     <dimen name="bubble_width">256dp</dimen>
 
     <dimen name="image_preview_size">150dp</dimen>
+    <dimen name="sensor_icon">16dp</dimen>
+    <dimen name="separator_width">1dp</dimen>
+    <dimen name="bottom_container_elevation">2dp</dimen>
 
 </resources>
