--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -56,4 +56,11 @@
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/buttom_swiping_panel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
+
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
