Implementing sensor master interactor and recycler view while refactoring code to share logic between relevant message use cases

--- a/app/src/main/res/layout/fragment_sensor_detail.xml
+++ b/app/src/main/res/layout/fragment_sensor_detail.xml
@@ -1,14 +1,14 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
-
+<layout>
     <data>
 
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.sensor.viewModel.SensorDetailViewModel"/>
+            type="com.teamagam.gimelgimel.app.sensor.viewModel.SensorDetailsViewModel"/>
     </data>
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center|top"
