Changed message display to be only a list of messages (whatsapp like). Removed message container fragment.
Fixed 2 bugs concerning the bottom message panel:
 1.  RecyclerView is scrollable
 2. The bottom panel view dimension is updated with every panel slide - it means you can see all the messages when scrolling the recycler-view all the time.

--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -5,19 +5,19 @@
 
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.message.viewModel.MessagesMasterViewModel"/>
+            type="com.teamagam.gimelgimel.app.message.viewModel.MessagesViewModel"/>
     </data>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_messages_recycler"
-        android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/fragment_messages_recycler"
+        android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".app.message.view.MessagesMasterFragment"
+        tools:context=".app.message.view.MessagesFragment"
         tools:listitem="@layout/recycler_messages_list_item"/>
 </layout>
