--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    android:id="@+id/activity_main_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
     sothree:umanoAnchorPoint="0.5"
-    sothree:umanoDragView="@+id/message_title_layout"
+    sothree:umanoDragView="@+id/bottom_panel_tabs"
     sothree:umanoFadeColor="@android:color/transparent"
     sothree:umanoPanelHeight="68dp"
     sothree:umanoShadowHeight="8dp">
@@ -27,7 +28,7 @@
                 android:id="@+id/main.toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         </android.support.design.widget.AppBarLayout>
 
         <RelativeLayout
@@ -45,34 +46,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:ignore="MergeRootFrame"
-                tools:layout="@layout/fragment_cesium" />
+                tools:layout="@layout/fragment_cesium"/>
 
             <FrameLayout
                 android:id="@+id/activity_main_container_footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true" />
+                android:layout_alignParentBottom="true"/>
 
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-      >
+    <LinearLayout android:id="@+id/bottom_panel_layout"
+                  xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+        >
 
         <com.astuetz.PagerSlidingTabStrip
             android:id="@+id/bottom_panel_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            app:pstsDividerColor="@color/black"
+            app:pstsIndicatorColor="@color/blue"
             app:pstsShouldExpand="true"
             app:pstsTextAllCaps="true"
-            app:pstsIndicatorColor="@color/blue"
-            app:pstsUnderlineColor="@color/black"
-            app:pstsDividerColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="68dp" />
+            app:pstsUnderlineColor="@color/black"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/bottom_swiping_panel"
