--- a/app/src/main/res/layout/recycler_messages_list_item.xml
+++ b/app/src/main/res/layout/recycler_messages_list_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/recycler_message_listitem_layout"
     android:layout_width="match_parent"
     android:layout_height="40dp"
+              android:background="@drawable/balloon_incoming_normal"
     android:layout_gravity="start"
     android:orientation="horizontal">
 
