--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -38,9 +38,7 @@
                 android:fontFamily="serif"
                 android:hint="Please describe the location..."
                 android:paddingLeft="20dp"
-                android:text="@={viewModel.text}"
-                app:errorEnabled="@{viewModel.inputNotValid}"
-                app:errorText="@{@string/dialog_validation_failed_geo_text_message}" />
+                android:text="@={viewModel.text}" />
 
             <Spinner
                 android:layout_width="wrap_content"
