End of day commit. Tried to solve duplicate code by new hierarchy of SendMessageViewModel. Not working yet...

--- a/app/src/main/res/layout/dialog_send_message.xml
+++ b/app/src/main/res/layout/dialog_send_message.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.message.viewModel.SendMessageViewModel" />
+            type="com.teamagam.gimelgimel.app.message.viewModel.SendSimpleMessageViewModel" />
     </data>
 
     <LinearLayout
