--- a/app/src/main/res/layout/recycler_message_list_item_content.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_content.xml
@@ -3,33 +3,87 @@
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/recycler_message_list_item_other">
 
-    <ImageView
-        android:id="@+id/message_row_type_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:contentDescription="@string/fragment_messages_master_message_type"
-        tools:src="@drawable/ic_message_black"/>
 
-    <TextView
-        android:id="@+id/message_row_sender_textview"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/spacing_small"
         android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_toEndOf="@+id/message_row_type_imageview"
-        android:textAppearance="?attr/textAppearanceListItem"
-        tools:text="Title"/>
+        android:paddingBottom="@dimen/spacing_extra_small"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/message_row_date_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/spacing_normal"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_toEndOf="@+id/message_row_sender_textview"
-        android:textAppearance="?attr/textAppearanceListItem"
-        tools:text="07/07/2016 10:44"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/spacing_extra_small"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/message_sender_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Name"/>
+
+            <ImageView
+                android:id="@+id/message_type_imageview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:src="@drawable/ic_message_black"/>
+
+            <TextView
+                android:id="@+id/message_text_content"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:textAppearance="?attr/textAppearanceListItem"
+                tools:text="a message dummy"/>
+
+
+            <TextView
+                android:id="@+id/message_date_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                tools:text="07/07/2016 10:44"/>
+        </LinearLayout>
+
+        <View
+            android:id="@+id/message_geo_panel_separator"
+            android:layout_width="@dimen/separator_width"
+            android:layout_height="match_parent"
+            android:background="@color/gray_light"
+            />
+
+        <LinearLayout
+            android:id="@+id/message_geo_panel"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/spacing_extra_small"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/message_goto_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GoTo"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/separator_width"
+                android:background="@color/gray_light"
+                />
+
+            <ToggleButton
+                android:id="@+id/message_display_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 </merge>
