--- a/app/src/main/res/layout/recycler_message_list_item_self.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_self.xml
@@ -3,9 +3,10 @@
     android:id="@+id/recycler_message_listitem_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/whatsapp_messages_spacing"
-    android:layout_marginEnd="@dimen/spacing_small"
+    android:layout_marginStart="@dimen/spacing_extra_small"
+    android:layout_marginEnd="@dimen/spacing_extra_small"
     android:gravity="end"
     >
 
