--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,5 +31,6 @@
     <dimen name="separator_width">1dp</dimen>
     <dimen name="bottom_container_elevation">2dp</dimen>
     <dimen name="whatsapp_messages_spacing">6dp</dimen>
+    <dimen name="spacing_extra_small">4dp</dimen>
 
 </resources>
