--- a/app/src/main/res/layout/recycler_message_list_item_content.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_content.xml
@@ -9,80 +9,93 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_small"
         android:layout_marginStart="@dimen/spacing_normal"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/spacing_extra_small"
-        android:orientation="horizontal">
+        >
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/spacing_extra_small"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/message_sender_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Name"/>
-
-            <ImageView
-                android:id="@+id/message_type_imageview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                tools:src="@drawable/ic_message_black"/>
-
-            <TextView
-                android:id="@+id/message_text_content"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textAppearance="?attr/textAppearanceListItem"
-                tools:text="a message dummy"/>
-
-
-            <TextView
-                android:id="@+id/message_date_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                tools:text="07/07/2016 10:44"/>
-        </LinearLayout>
-
-        <View
-            android:id="@+id/message_geo_panel_separator"
-            android:layout_width="@dimen/separator_width"
-            android:layout_height="match_parent"
-            android:background="@color/gray_light"
-            />
-
-        <LinearLayout
-            android:id="@+id/message_geo_panel"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/spacing_extra_small"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/message_goto_button"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="GoTo"/>
+                android:layout_marginEnd="@dimen/spacing_extra_small"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/message_sender_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Name"/>
+
+                <ImageView
+                    android:id="@+id/message_type_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    tools:src="@drawable/ic_message_black"/>
+
+                <TextView
+                    android:id="@+id/message_text_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceListItem"
+                    tools:text="a message dummy that is just the right wrong size for it to be exactly about what I must optionally use right later"/>
+            </LinearLayout>
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/separator_width"
+                android:id="@+id/message_geo_panel_separator"
+                android:layout_width="@dimen/separator_width"
+                android:layout_height="match_parent"
                 android:background="@color/gray_light"
                 />
 
-            <ToggleButton
-                android:id="@+id/message_display_toggle"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/message_geo_panel"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                />
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/spacing_extra_small"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/message_goto_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_message_go_to"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/separator_width"
+                    android:background="@color/gray_light"
+                    />
+
+                <ToggleButton
+                    android:id="@+id/message_display_toggle"
+                    style="@style/toggleButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_toggle_bg"
+                    android:backgroundTint="@color/black"
+                    android:checked="true"/>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/message_date_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing_extra_small"
+            android:layout_gravity="end"
+            tools:text="07/07/2016 10:44"/>
 
 
     </LinearLayout>
