--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -73,7 +73,7 @@
             app:pstsDividerColor="@color/black"
             app:pstsIndicatorColor="@color/blue"
             app:pstsShouldExpand="true"
-            app:pstsTextAllCaps="true"
+            app:pstsTabTextAllCaps="true"
             app:pstsUnderlineColor="@color/black"/>
 
         <android.support.v4.view.ViewPager
