Added functionality, working poorly (app is running, but! there are yet bugs in operation: messages counted twice, implemented unprofessionally, tabs are not supported)

--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -18,6 +18,6 @@
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".app.message.view.MessagesFragment"
+        tools:context=".app.message.view.MessagesContainerFragment"
         tools:listitem="@layout/recycler_message_list_item_other"/>
 </layout>
