--- a/app/src/main/res/layout/recycler_sensor_list_item.xml
+++ b/app/src/main/res/layout/recycler_sensor_list_item.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/recycler_sensor_list_item_image"
-        android:layout_width="@dimen/sensor_icon"
+        android:layout_width="@dimen/sensor_list_item_icon_size"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center"
         android:layout_marginStart="@dimen/spacing_small"
