--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,9 @@
     <dimen name="spacing_large">32dp</dimen>
     <dimen name="spacing_normal">16dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
+    <dimen name="spacing_extra_small">4dp</dimen>
+
+    <dimen name="separator_width">1dp</dimen>
 
     <!-- Font sizes -->
     <dimen name="font_size_extra_large">24sp</dimen>
@@ -18,19 +21,13 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <!-- fabs -->
-    <dimen name="fab_big">56dp</dimen>
-    <dimen name="fab_normal">76dp</dimen>
+    <dimen name="sensor_list_item_icon_size">16dp</dimen>
 
-    <dimen name="messages_count">86dp</dimen>
-
-    <dimen name="bubble_width">256dp</dimen>
-
-    <dimen name="image_preview_size">150dp</dimen>
-    <dimen name="sensor_icon">16dp</dimen>
-    <dimen name="separator_width">1dp</dimen>
     <dimen name="bottom_container_elevation">2dp</dimen>
+
     <dimen name="whatsapp_messages_spacing">6dp</dimen>
-    <dimen name="spacing_extra_small">4dp</dimen>
+    <dimen name="image_preview_size">180dp</dimen>
+    <dimen name="geo_panel_icon_size">35dp</dimen>
+    <dimen name="message_content_minimum_width">200dp</dimen>
 
 </resources>
