--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -57,8 +57,7 @@
     </android.support.design.widget.CoordinatorLayout>
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/bottom_panel_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
