--- a/app/src/main/res/layout/fragment_send_messages.xml
+++ b/app/src/main/res/layout/fragment_send_messages.xml
@@ -11,6 +11,8 @@
         android:id="@+id/fragment_messages_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing_small"
+        android:layout_marginStart="@dimen/spacing_small"
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
@@ -44,6 +46,8 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/send_text_message_fab"
             style="@style/fab"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
             android:onClick="@{() -> viewModel.onSendTextFabClicked()}"
             android:src="@android:drawable/ic_menu_send" />
 
