--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_big">56dp</dimen>
+    <dimen name="fab_normal">76dp</dimen>
 
     <dimen name="sensor_list_item_icon_size">16dp</dimen>
 
