--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,12 +35,14 @@
     <color name="default_list_item">@color/transparent</color>
 
     <!--MessageApp List Colors-->
-    <color name="unread_message_list_item">@color/slide_panel_ripple</color>
     <color name="selection_color">#603F51B5</color>
 
     <!--MessageApp Notifications -->
     <color name="message_notification_error">@color/red</color>
     <color name="message_notification_success">@color/green</color>
     <color name="message_notification_sending">@color/colorPrimary</color>
+
+    <!--Whatsapp colors-->
+    <color name="message_alert_bg_color">#F44336</color>
 
 </resources>
