--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/messages_background_image"
+            android:clickable="true"
+            android:focusable="true"
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
