Notifying user when a new alerts is received. App's toolbar is animating from its original color to red (repeatedly) and it's (the toolbar's) title is changing to alert. The toolbar status is being restored after clicking on it.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,8 @@
     <!--Whatsapp colors-->
     <color name="message_alert_bg_color">#F44336</color>
 
+    <!--Alerts informing animation-->
+    <color name="alerts_informing_peak_color">@color/red</color>
+
+
 </resources>
