--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
 
     <!--MessageApp List Colors-->
     <color name="unread_message_list_item">@color/slide_panel_ripple</color>
+    <color name="selection_color">#603F51B5</color>
 
     <!--MessageApp Notifications -->
     <color name="message_notification_error">@color/red</color>
