Disabled username changing. Username is determined on first launch. Added name generator. Validate name: contains no emojis, not empty (or spaces only), and no longer than 20 chars.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -3,10 +3,11 @@
     <EditTextPreference
         android:capitalize="words"
         android:defaultValue="@string/pref_default_display_name"
+        android:enabled="false"
         android:inputType="textCapWords"
         android:key="@string/user_name_text_key"
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="@string/pref_title_display_name" />
+        android:title="@string/pref_title_display_name"/>
 </PreferenceScreen>
