--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    android:id="@+id/activity_main_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
@@ -27,7 +28,7 @@
                 android:id="@+id/main_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         </android.support.design.widget.AppBarLayout>
 
         <RelativeLayout
@@ -37,7 +38,7 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:animateLayoutChanges="true">
 
-            <include layout="@layout/alerts_text_views" />
+            <include layout="@layout/alerts_text_views"/>
 
             <fragment
                 android:id="@+id/fragment_cesium_view"
@@ -45,13 +46,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:ignore="MergeRootFrame"
-                tools:layout="@layout/fragment_cesium" />
+                tools:layout="@layout/fragment_cesium"/>
 
             <FrameLayout
                 android:id="@+id/activity_main_container_footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true" />
+                android:layout_alignParentBottom="true"/>
 
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
