--- a/app/src/main/res/layout/recycler_message_list_item_content.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_content.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:fresco="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/recycler_message_list_item_other">
 
@@ -64,14 +63,12 @@
         </LinearLayout>
 
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/message_type_imageview"
             android:layout_width="@dimen/image_preview_size"
             android:layout_height="@dimen/image_preview_size"
             android:layout_gravity="center"
-            fresco:actualImageScaleType="fitCenter"
-            fresco:fadeDuration="500"
-            fresco:placeholderImage="@drawable/ic_message_black"/>
+            />
 
         <TextView
             android:id="@+id/message_text_content"
