--- a/app/src/main/res/layout/activity_image_fullscreen.xml
+++ b/app/src/main/res/layout/activity_image_fullscreen.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     tools:context="com.teamagam.gimelgimel.app.message.view.ImageFullscreenActivity">
 
-
+    <it.sephiroth.android.library.imagezoom.ImageViewTouch
+        android:id="@+id/image_fullscreen_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
