--- a/app/src/main/res/drawable/ic_alert.xml
+++ b/app/src/main/res/drawable/ic_alert.xml
@@ -1,9 +1,10 @@
-<?xml version="1.0"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="12dp"
+        android:height="12dp"
+        android:viewportHeight="24"
+        android:viewportWidth="24">
 
-<!-- drawable/alert-outline.xml -->
-
-    <vector android:viewportHeight="24" android:viewportWidth="24" android:width="24dp" android:height="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <path android:pathData="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16" android:fillColor="#000"/>
+    <path android:fillColor="#000"
+          android:pathData="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"/>
 
 </vector>
