--- a/app/src/main/res/layout/fragment_viewer.xml
+++ b/app/src/main/res/layout/fragment_viewer.xml
@@ -7,8 +7,8 @@
             type="com.teamagam.gimelgimel.app.map.viewModel.MapViewModel"/>
     </data>
 
-    <FrameLayout android:id="@+id/viewer_layout"
-                 xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+                 android:id="@+id/viewer_layout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  tools:context=".app.map.view.ViewerFragment">
