--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="transparent">#00000000</color>
+    <color name="semi_transparent">#64000000</color>
 
     <!-- Grayscale -->
     <color name="white">#FFFFFF</color>
