--- a/app/src/main/res/layout/activity_image_fullscreen.xml
+++ b/app/src/main/res/layout/activity_image_fullscreen.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.teamagam.gimelgimel.app.message.view.ImageFullscreenActivity">
+
+    <com.github.rahatarmanahmed.cpv.CircularProgressView
+        android:id="@+id/fullscreen_progress_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cpv_animAutostart="true"
+        app:cpv_indeterminate="true" />
 
     <it.sephiroth.android.library.imagezoom.ImageViewTouch
         android:id="@+id/image_fullscreen_view"
