--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -59,20 +59,20 @@
         android:clickable="true"
         android:orientation="vertical">
 
-        <com.astuetz.PagerSlidingTabStrip
-            android:id="@+id/bottom_panel_tabs"
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            app:pstsDividerColor="@color/black"
-            app:pstsIndicatorColor="@color/blue"
-            app:pstsShouldExpand="true"
-            app:pstsTabTextAllCaps="true"
-            app:pstsUnderlineColor="@color/black"/>
-
         <android.support.v4.view.ViewPager
             android:id="@+id/bottom_swiping_panel"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <android.support.v4.view.PagerTitleStrip
+                android:id="@+id/bottom_panel_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                app:pstsDividerColor="@color/black"
+                app:pstsIndicatorColor="@color/blue"
+                app:pstsShouldExpand="true"
+                app:pstsTabTextAllCaps="true"
+                app:pstsUnderlineColor="@color/black"/>
 
         </android.support.v4.view.ViewPager>
     </LinearLayout>
