Changed the implementation of the bottom panel adapter to know nothing about its pages, but instead allow dynamically adding pages by a polymorphic call to its FragmentFactory's (newly introduced interface) create method. Things now work as usual.

--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v4.view.PagerTitleStrip
+            <android.support.v4.view.PagerTabStrip
                 android:id="@+id/bottom_panel_tabs"
                 android:layout_width="match_parent"
                 android:layout_height="68dp"
