Changed the name of the image container
Added version to the ImageViewZoom dependency

--- a/app/src/main/res/layout/recycler_message_list_item_content.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_content.xml
@@ -62,7 +62,7 @@
 
 
         <FrameLayout
-            android:id="@+id/image_viewholder_layout"
+            android:id="@+id/image_container"
             android:layout_width="@dimen/image_preview_size"
             android:layout_height="@dimen/image_preview_size"
             android:clickable="true">
