Changed the location strategy to do mroe request when there is no valid location after long time

--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -2,5 +2,6 @@
 <resources>
     <!--location fetcher configuration-->
     <integer name="location_min_update_frequency_ms">20000</integer>
+    <integer name="location_rapid_update_frequency_ms">20000</integer>
     <integer name="location_threshold_update_distance_m">3</integer>
 </resources>
