Clicking on "locate me" fab will also use the compass to align the map with the direction the device is currently facing.
Additional changes:
1. Added lambda support for app module
2. Changed the compass plugin  - it's now refreshing its position at 60 fps (logic is on a separate thread)
3. Moved ESRI plugins and graphics into matching packages
4. changed LocationFetcher to expose its LocationListener to be shared with the ESRI LocationDisplayManager

--- a/app/src/main/res/layout/fragment_viewer.xml
+++ b/app/src/main/res/layout/fragment_viewer.xml
@@ -28,7 +28,7 @@
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/locate_me_fab"
                 style="@style/fab"
-                android:onClick="@{() -> viewModel.zoomToLastKnownLocation()}"
+                android:onClick="@{() -> viewModel.onLocationFabClicked()}"
                 android:src="@android:drawable/ic_dialog_map"/>
         </LinearLayout>
 
